# recommendation_system

./: .gitignore  README.md  chatbot.py  chromadb_helper.py  evaluation.py  main.py  pyproject.toml  setup_chromadb.py  styles.css  test.ipynb
csv/: filtered_output.csv  processed_data.csv
graph/: line_chart_plotly.py
