[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ipykernel>=7.1.0",
    "num2words>=0.5.14",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "webdriver-manager>=4.0.2",
]
